# global-opt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-tests.yml
example/: main.cpp
include/: DE_finding_global_min.h  GlobalMinimumShekel.h  create_bounds.h  measuring_time.h  optimize_result.h
include/differential_evolution/: differential_evolution.h
include/shgo/: delaunay.h  edge.h  hooke_jeeves.h  measuring_time.h  shgo.h  simplex.h  tools.h
src/: DE_finding_global_min.cpp  GlobalMinimumShekel.cpp  measuring_time.cpp  python_bindings.cpp
src/differential_evolution/: differential_evolution.cpp
src/shgo/: shgo.cpp
tests/: test_main.cpp
tests/GKLS_test/: GKLS_test.cpp
tests/Grishagin_test/: Grishagin_test.cpp
tests/Hill_test/: Hill_test.cpp
tests/Shekel_test/: Shekel_test.cpp
tests/differential_evolution/GKLS_test/: GKLS_test.cpp
tests/differential_evolution/Grishagin_test/: Grishagin_test.cpp
tests/differential_evolution/Hill_test/: Hill_test.cpp
tests/differential_evolution/Shekel_test/: Shekel_test.cpp
tests/shgo/GKLS_test/: GKLS_test.cpp
tests/shgo/Grishagin_test/: Grishagin_test.cpp
tests/shgo/Hill_test/: Hill_test.cpp
tests/shgo/Shekel_test/: Shekel_test.cpp
visualization/: animation.py  differential_evolution.py  plot2D.py  plot3D.py  requirements.txt
visualization/functions/: Hill.py  Shekel.py  function.py  rosen.py
